# Distributed_MPI_LIB

./: CMakeLists.txt  Makefile  application.cpp  cluster.yaml  network_communicator.cpp
include/: message.h  shared_memory.hpp
src/: services.cpp  shared_memory.cpp
